5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1643_2711.log
== TEST (2019-04-15 18:12:37) 
-- CODE:
v1=int(input("valor disponivel:"))
q=int(input("quantidade de tickets:")
v2=float(input("valor dos ticketis:"))
a=int(input("quantidade de passes de onibus:"))
v3=float(input("valor dos passes:"))
if()
	print(suciente)
else:
	print(insuficiente)
-- ERROR:
File "XXXX", line 3
    v2=float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:12:47) 
-- CODE:
v1=int(input("valor disponivel:"))
q=int(input("quantidade de tickets:")
v_2=float(input("valor dos ticketis:"))
a=int(input("quantidade de passes de onibus:"))
v3=float(input("valor dos passes:"))
if()
	print(suciente)
else:
	print(insuficiente)
-- ERROR:
File "XXXX", line 3
    v_2=float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:13:12) 
-- CODE:
v1=int(input("valor disponivel:"))
q=int(input("quantidade de tickets:")
valor_ticktis=float(input("valor dos ticketis:"))
a=int(input("quantidade de passes de onibus:"))
v3=float(input("valor dos passes:"))
if()
	print(suciente)
else:
	print(insuficiente)
-- ERROR:
File "XXXX", line 3
    valor_ticktis=float(input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:13:21) 
-- CODE:
v1=int(input("valor disponivel:"))
q=int(input("quantidade de tickets:")
valor_tickts=float(input("valor dos ticketis:"))
a=int(input("quantidade de passes de onibus:"))
v3=float(input("valor dos passes:"))
if()
	print(suciente)
else:
	print(insuficiente)
-- ERROR:
File "XXXX", line 3
    valor_tickts=float(input())
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:13:37) 
-- CODE:
v1=int(input("valor disponivel:"))
q=int(input("quantidade de tickets:")
valor_dos_tickets=float(input("valor dos ticketis:"))
a=int(input("quantidade de passes de onibus:"))
v3=float(input("valor dos passes:"))
if()
	print(suciente)
else:
	print(insuficiente)
-- ERROR:
File "XXXX", line 3
    valor_dos_tickets=float(input())
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:23:09) 
-- CODE:
v1=int(input("valor disponivel:"))
q=int(input("quantidade de tickets:")
valor_dos_tickets=float(input("valor dos ticketis:"))
a=int(input("quantidade de passes de onibus:"))
v3=float(input("valor dos passes:"))
if()
	print(suciente)
else:
	print(insuficiente)
-- ERROR:
File "XXXX", line 3
    valor_dos_tickets=float(input())
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:23:25) 
-- CODE:
v1=int(input("valor disponivel:"))
q=int(input("quantidade de tickets:")
valor2=float(input("valor dos ticketis:"))
a=int(input("quantidade de passes de onibus:"))
v3=float(input("valor dos passes:"))
if()
	print(suciente)
else:
	print(insuficiente)
-- ERROR:
File "XXXX", line 3
    valor2=float(input())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
